<resources>

    <string name="image">image</string>
    <string name="button">button</string>
    <string name="icon">icon</string>
    <string name="nav_Offers">Offers</string>
    <string name="nav_orderHis">Order History</string>
    <string name="nav_Favourites">Favourites</string>
    <string name="nav_contactUs">Contact Us</string>
    <string name="nav_TermsAnd_condition">Terms &amp; Condition</string>
    <string name="nav_like_Facebook">Like us on Facebook</string>
    <string name="nav_about">About</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="fav_title">Favourite</string>
    <string name="app_name">Pizza Express</string>
    <string name="home_title">Category</string>
    <string name="category_pizza">Pizza</string>
    <string name="category_sides">Sides &amp; Others</string>
    <string name="category_beverages">Beverages</string>
    <string name="category_desserts">Desserts</string>
    <string name="OrdHis_title">Order History</string>
    <string name="OrdHis_backIconTxt">back</string>
    <string name="OrdHiss_orderNo">Order Num#</string>
    <string name="OrdHis_date">Date</string>
    <string name="OrdHi_Address">Address</string>
    <string name="OrdHis_Items">Items</string>
    <string name="pro_title">My Profile</string>
    <string name="pro_save">Save Changes</string>
    <string name="acc_edit">edit details</string>
    <string name="acc_points">Loyalty Points</string>
    <string name="cat_p_pizza1">Sausage Delight RS.999</string>
    <string name="cat_p_pizza2">Meat Lovers Chicken Spicy RS.1200</string>
    <string name="cat_p_pizza3">Super Supreme RS.800</string>
    <string name="cat_p_pizza4">Prawn with Chicken Bacon &amp; Jalapeno RS.710</string>

    <string name="cat_p_pizza5">My Profile</string>
    <string name="test">test123</string>


    <string name="text1">Review Your Oder</string>
    <string name="text2">PLEASE ENTER THE DETAILS BELOW TO COMPLETE YOUR ODER</string>
    <string name="text3">Your Delivery Address</string>
    <string name="text4">Flat/House No*</string>
    <string name="text5">ITEMS YOU HAVE SELECTED</string>
    <string name="text6">Garden Fresh Delight</string>
    <string name="text7">Crust: Classic Hand Tossed Toppings: Black Olives + Onion + Crisp Capsicum + Mushroom + Fresh Tomato + Golden Corn + Jalapeno + Cheese + Bell Pepper </string>
    <string name="text8">FEEDBACK</string>
    <string-array name="inquiry">
        <item>Contact</item>
        <item>Oder Inquiry</item>
        <item>Oder Inquiry</item>
        <item>complaint</item>
    </string-array>
    <string name="text9">If You Can Please Rate Us For Our Improvements</string>
    <string name="text10">How was your pizza</string>
    <string name="text11">What is your opinion of this app</string>
    <string name="text12">How was your delivery</string>

    <string name="pizza1_name">Sausage Delight</string>
    <string name="pizza2_name">Meat Lovers Chicken Spicy</string>
    <string name="pizza3_name">Super Supreme</string>
    <string name="pizza4_name">Prawn with Chicken Bacon &amp; Jalapeno</string>
    <string name="pizza1_price">RS.999</string>
    <string name="pizza2_price">RS.1200</string>
    <string name="pizza3_price">RS.800</string>
    <string name="pizza4_price">RS.710</string>
    <string name="sizes">Sizes</string>
    <string name="plus">+</string>
    <string name="_00">01</string>
    <string name="minus">-</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="pizza1_descr">Chicken sausages &amp; onions with a double layer of mozzarella cheese.</string>
    <string name="pizza2_descr">Topped with a combination of chicken bacon, chicken sausage, BBQ chicken and spicy chicken.</string>
    <string name="pizza3_descr">Chicken bacon, chicken sausage and olives with a double layer of mozzarella cheese.</string>
    <string name="pizza4_descr">Succulent prawns with pieces of chicken bacon</string>


    <string name="cart_title">My Cart</string>

    <string name="cart1">Sausage Delight</string>
    <string name="cart1size">M</string>
    <string name="cart1minus">-</string>
    <string name="cart1qty">1</string>
    <string name="cart1plus">+</string>
    <string name="cart1_price">Rs. 999.00</string>

    <string name="cart2">Meat Lovers Chicken</string>
    <string name="cart2_price">Rs. 1200.00</string>

    <string name="sub_total_txt">Sub-Total</string>
    <string name="sub_total_amt">2199.00</string>
    <string name="delivery">Delivery Fee</string>
    <string name="delivery_amt">Standard</string>
    <string name="total_txt">Total Price</string>
    <string name="total_amt">2249.00</string>

    <string name="checkout_btn">CHECKOUT</string>


    <string name="side1">Chicken Wings - BBQ RS.  410.00</string>
    <string name="side2">Chicken Wings Garlic Parmesan RS. 450.00</string>
    <string name="side3">Garlic Bread RS. 300.00</string>
    <string name="side4">Cheesy Garlic Bread RS. 460.00</string>
    <string name="side5">Potato Wedges RS. 420.00</string>
    <string name="side6">Spicy Chicken Cheeseballs RS. 440.00</string>
    <string name="about_title">About Us</string>
    <string name="about_text">Pizza Express, a subsidiary of Yum! Brands, is the world\'s largest pizza company and home of Pan Pizza. Pizza Hut began 60 years ago in Wichita, Kansas, and today is an iconic global brand that delivers more pizza, pasta and wings than any other restaurant in the world.   Since its inception in 1993, Pizza Express has fast become a household name across Sri Lanka. With its first restaurant at Union Place, Colombo 2, Pizza Express became the first international restaurant chain to begin operations in Sri Lanka. Pizza Express is a brand name belonging to global restaurant chain Yum Brands Incorporated which is based in USA. It is the world\'s largest restaurant company   In 1999, Pizza Express ventured into the home delivery service setting yet another innovative milestone in Sri Lanka. With the launch of its island-wide delivery hotline 011 2 729729, Pizza Hut delivery rose swiftly to provide 50% of the restaurant\'s net sales.   To date, Pizza Express Sri Lanka employs over 1800 staff members with diverse backgrounds. As an equal opportunity employer, Pizza Express utilizes 1% of its annual income towards training and welfare. The company strongly believes in creating a results oriented fun working environment.   Over the past 24 years, Pizza Express has grown from strength to strength. At Pizza Express, we believe in delighting the senses of each and every customer. This is why all dine-in outlets offer a unique family friendly dine-in experience whilst effectively capturing the gastronomic palate of the Sri Lankan consumer with innovative additions to its menu. Currently Pizza Express serves a wide range of pizza toppings with an exciting selection of special crusts as well as appetizers, pastas, rice, desserts and beverages.</string>
    <string name="sides1_name">Chicken Wings - BBQ</string>
    <string name="sides1_descr"><![CDATA[Succulent chicken wings tossed in our famous BBQ sauce & baked to perfection]]></string>
    <string name="side1_price">RS.800</string>


    <string name="app_name2">MAD_p1</string>

    <string name="login">Login</string>

    <string name="user_name">UserName</string>

    <string name="pw">Password</string>

    <string name="forgot_pw">FORGOT PASSWORD?</string>

    <string name="become_member">BECOME A MEMBER</string>

    <string name="first_name">First Name *</string>

    <string name="last_name">Last Name *</string>

    <string name="phone_number">Phone Number *</string>

    <string name="email">Email</string>

    <string name="password">Password *</string>

    <string name="confirm_password">Confirm Password *</string>

    <string name="value_offers">Everyday Value Offers</string>

    <string name="msg1">Slicey \n\n Starting from \n Rs.750.00</string>
    <string name="msg1_des"> A Personal Pan Pizza + 2 Spicy Chicken &amp; Cheese Balls + 1 Vanilla Shake or a Lava Cake   </string>
    <string name="msg2">Feasty \n\n Starting from \n Rs.750.00</string>

    <string name="msg3">Pastalicious \n\n Starting from \n Rs.850.00</string>

    <string name="option1">1ST OPTION \n\n *Maximum of 1 item allowed from this option</string>
    <string name="option2">2ND OPTION \n\n *Maximum of 1 item allowed from this option</string>
    <string name="option3">3RD OPTION \n\n *Maximum of 1 item allowed from this option</string>
    <string name="s_delight">Chicken sausages and onions with  a double layer \n of mozzarella cheese</string>
    <string name="dessert1">Chocolate Macaroons \n RS.150 </string>
    <string name="dessert1_des">Cashew nuts are packed with chocolate</string>
    <string name="dessert2">Choco Lava Cake \n RS.200</string>
    <string name="dessert2_des">Gooey thick chocolate melt covered with chocolate cake</string>
    <string name="dessert3">Choco Bread Sticks \n RS.150 </string>
    <string name="dessert3_des">Chocolate chips and chocolate sause in a tasty oven baked bread</string>
    <string name="dessert4">Moon Cake \n RS.100 </string>
    <string name="dessert4_des">Cotillons are a French dessert speciality with a sponge cake base, jelly and vanilla custard
</string>
    <string name="dessert5">Banoffee Cupcakes\n RS.100 </string>
    <string name="dessert5_des">
delicious banana cupcakes with a caramel topping</string>
    <string name="dessert6">Chocolate Whoopie \n RS.200 </string>
    <string name="dessert6_des">Chocolate Whoopie pie with chocolate buttons</string>
    <string name="milk_shakes_300ml">Milk Shakes (300ml)</string>
    <string name="chocolate_melt_lava_cake">Chocolate Melt Lava Cake</string>
    <string name="_3rd_option">3RD OPTION</string>
    <string name="profile">Profile</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>