<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MyCart">

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:text="@string/cart_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/back_button"
        android:elevation="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="251dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView4"
                        android:layout_marginStart="106dp"
                        android:layout_marginTop="22dp"
                        android:layout_toEndOf="@+id/imageView6"
                        android:text="@string/cart1size"
                        android:textColor="@android:color/black"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="-154dp"
                        android:layout_toEndOf="@+id/imageView6"
                        android:text="@string/cart1"
                        android:textColor="@android:color/black"
                        android:typeface="serif" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/sausage_delight" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="7dp"
                        android:layout_toEndOf="@+id/button5"
                        android:text="@string/cart1qty"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="31dp"
                        android:layout_height="35dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="181dp"
                        android:layout_marginTop="7dp"
                        android:layout_toEndOf="@+id/imageView6"
                        android:text="@string/cart1minus" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="31dp"
                        android:layout_height="35dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@+id/textView6"
                        android:text="@string/cart1plus" />

                    <TextView
                        android:id="@+id/Qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView6"
                        android:layout_marginStart="77dp"
                        android:layout_marginTop="7dp"
                        android:layout_toEndOf="@+id/textView5"
                        android:text="@string/cart1_price"
                        android:textColor="@android:color/black" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="21dp"
                        android:layout_height="23dp"
                        android:layout_marginStart="14dp"
                        android:layout_toEndOf="@+id/button7"
                        app:srcCompat="@android:drawable/ic_delete" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView8"
                        android:layout_marginStart="106dp"
                        android:layout_marginTop="22dp"
                        android:layout_toEndOf="@+id/imageView7"
                        android:text="@string/cart1size"
                        android:textColor="@android:color/black"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="-154dp"
                        android:layout_toEndOf="@+id/imageView7"
                        android:text="@string/cart2"
                        android:textColor="@android:color/black"
                        android:typeface="serif" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/meat_lovers_chicken" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="7dp"
                        android:layout_toEndOf="@+id/button8"
                        android:text="@string/cart1qty"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="31dp"
                        android:layout_height="35dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="181dp"
                        android:layout_marginTop="7dp"
                        android:layout_toEndOf="@+id/imageView7"
                        android:text="@string/cart1minus" />

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="31dp"
                        android:layout_height="35dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@+id/textView10"
                        android:text="@string/cart1plus" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView10"
                        android:layout_marginStart="77dp"
                        android:layout_marginTop="7dp"
                        android:layout_toEndOf="@+id/textView9"
                        android:text="@string/cart2_price"
                        android:textColor="@android:color/black" />

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="21dp"
                        android:layout_height="23dp"
                        android:layout_marginStart="14dp"
                        android:layout_toEndOf="@+id/button9"
                        app:srcCompat="@android:drawable/ic_delete" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="76dp"
        android:text="@string/total_amt"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="52dp"
        android:text="@string/delivery_amt"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="28dp"
        android:text="@string/sub_total_amt"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="496dp"
        android:background="@drawable/checkout_btn"
        android:padding="12dp"
        android:text="@string/checkout_btn"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/sub_total_txt"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/delivery"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/total_txt"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/botomRelativeLay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.bottomnavigation.BottomNavigationView

            android:id="@+id/botmNavBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F5F5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>