<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Sides1_chickenWingsBbq">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/backBtn_cat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_arrow_back"
            android:contentDescription="@string/OrdHis_backIconTxt" />


    </LinearLayout>


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/chicken_wings_bbq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sides1_name"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/side1_price"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />



    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:background="#9D9B9B"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sizes"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <RadioButton
            android:id="@+id/size_small"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:padding="5dp"
            android:text="6PCs"
            android:textAlignment="center"
            android:onClick="onAlignmentSelected"/>

        <RadioButton
            android:id="@+id/size_medium"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:padding="5dp"
            android:text="12PCs"
            android:textAlignment="center"
            android:onClick="onAlignmentSelected"/>

        <RadioButton
            android:id="@+id/size_large"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:padding="5dp"
            android:text="24PCs"
            android:textAlignment="center"
            android:onClick="onAlignmentSelected"/>


    </RadioGroup>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:background="#9D9B9B"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/itemBtn_dicre"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:text="@string/minus"
        android:textSize="20sp"
        android:onClick="decreaseItemQty"
        app:layout_constraintEnd_toStartOf="@+id/itemQty"
        app:layout_constraintTop_toTopOf="@+id/itemQty" />

    <TextView
        android:id="@+id/itemQty"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/_00"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/itemBtn_incre"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:background="@android:color/transparent"
        android:text="@string/plus"
        android:onClick="increaseItemQty1"
        app:layout_constraintStart_toEndOf="@+id/itemQty"
        app:layout_constraintTop_toTopOf="@+id/itemQty" />

    <Button
        android:id="@+id/itemBtt_AddToCart"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="#C6151515"
        android:shadowColor="#000"
        android:text="@string/add_to_cart"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemQty" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemBtt_AddToCart" />


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sides1_descr"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <RelativeLayout
        android:id="@+id/botomRelativeLay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.bottomnavigation.BottomNavigationView

            android:id="@+id/botmNavBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F5F5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>